microk8s/k8s/keycloak/services-destination-rule.yaml
apiVersion: "networking.istio.io/v1alpha3"
kind: "DestinationRule"
metadata:
  name: services-dr
  namespace: keycloak
spec:
  host: '*'
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
